--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="shortcut icon" href="./src/imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/imagens/favicon.ico" type="image/x-icon">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="./src/css/reset.css">
 		<link rel="stylesheet" href="./src/css/styles.css">
 		<link rel="stylesheet" href="./src/css/responsivo.css">
+
 		<title>Super Mario Bros - O Filme</title>
 	</head>
 	<body>
@@ -45,9 +46,12 @@
 			<div class="modal">
 				<div class="conteudo-modal">
 					<span class="fechar-modal">X</span>
-					<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" tittle="Trailer Oficial" frameborder="1" allow="accelerometer;autoplay; clipboard-write; encrypted-media; gyroscope; pícture-in-picture" allowfullscreen></iframe>
+					<iframe id="video" width="560" height="315" src="" tittle="Trailer Oficial" frameborder="1" allow="accelerometer;autoplay; clipboard-write; encrypted-media; gyroscope; pícture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
 		</main>
+
+		<script src="./src/js/index.js"></script>
+
 	</body>
 </html>
